--- a/SimpleEE6App/nbproject/private/private.properties
+++ b/SimpleEE6App/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=/Users/TorkelNes/Library/Application Support/NetBeans/8.2/config/GlassFishEE6/Properties/gfv3-1180746517.properties
+deploy.ant.properties.file=C:\\Users\\Vidar\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3352403153.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/Users/TorkelNes/glassfish4/glassfish/domains/domain1
-j2ee.server.home=/Users/TorkelNes/glassfish4/glassfish
-j2ee.server.instance=[/Users/TorkelNes/glassfish4/glassfish:/Users/TorkelNes/glassfish4/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/Users/TorkelNes/glassfish4
-user.properties.file=/Users/TorkelNes/Library/Application Support/NetBeans/8.2/build.properties
+j2ee.server.domain=C:/glassfish4/glassfish/domains/domain1
+j2ee.server.home=C:/glassfish4/glassfish
+j2ee.server.instance=[C:\\glassfish4\\glassfish;C:\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/glassfish4
+user.properties.file=C:\\Users\\Vidar\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
